Update jpackage_command.md